--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "devDependencies": {
+    "@types/bencode": "^2.0.4",
     "@types/node": "^22.10.7"
+  },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "bencode": "^4.0.0",
+    "bncode": "^0.5.3"
   }
 }
