--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bencode": "^4.0.0",
+    "bittorrent-tracker": "^11.2.1",
     "bncode": "^0.5.3"
   }
 }
